<resources>
    <string name="app_name">NewsAdmin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plealse_wait">请稍后</string>
    <string name="loading_failed">数据加载失败</string>
    <!-- LOGIN -->
    <string name="login">登录</string>
    <string name="login_name_hint">账号/手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="no_account_number">没有账号？去注册</string>
    <!-- REGISTER -->
    <string name="register">注册</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_password">请输入密码</string>
    <string name="register_get_verification_code">获取验证码</string>
    <string name="register_verification_hitn">请输入验证码</string>
    <string name="register_cover_get_code">s后重新获取</string>
    <string name="register_sms_send">短信已发送，请注意查收</string>
    <!-- HOME -->
    <string name="home_title">有态度的新闻</string>
    <string name="news_num">5条新闻</string>
    <string name="news">新闻</string>
    <string name="add">上传</string>
    <string name="edit">编辑</string>
    <string name="me">我的</string>

    <!-- USER -->
    <string name="setting">设置</string>
    <string name="phone_register">手机号快速注册</string>
    <string name="sign">签到</string>
    <string name="calader">定时提醒</string>
    <string name="invation">邀请好友</string>
    <string name="good">为我点赞</string>
    <string name="my_follow">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="subscribe">订阅</string>
    <string name="collection">收藏</string>
    <string name="comment">跟帖</string>
    <string name="read">阅读</string>
    <string name="my_message">我的消息</string>
    <string name="new_dynamic">最新动态</string>
    <!-- 添加新闻 -->
    <string name="add_news">推送新闻</string>
    <string name="title">标题</string>
    <string name="news_type">新闻类别</string>
    <string name="add_text">添加段落</string>
    <string name="add_photo">添加图片</string>
    <string name="text">text</string>
    <string name="pic">pic</string>

    <!-- 新闻 -->
    <string name="news_message">新闻详情</string>
    <!-- 管理员信息 -->
    <string name="user_message">管理员信息</string>
    <string name="user_pic">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别(男/女)</string>
    <string name="birthday">生日(格式为yyyyMMdd)</string>
    <string name="user_sign">签名</string>
    <string name="update">修改</string>
</resources>
