<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peter.newsadmin.activity.HomeActivity">
<LinearLayout
    android:id="@+id/home_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/login_editText_hight"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/home_personal_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/home_tab"
            android:layout_height="@dimen/home_tab"
            android:padding="1dp"
            android:src="@drawable/tab_news"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@drawable/tab_home_color"
            android:textSize="@dimen/textSize24px" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_join_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/home_tab"
            android:layout_height="@dimen/home_tab"
            android:padding="1dp"
            android:src="@drawable/tab_add"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@drawable/tab_home_color"
            android:textSize="@dimen/textSize24px"
            android:visibility="visible"></TextView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/home_appointment_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/home_tab"
            android:layout_height="@dimen/home_tab"
            android:padding="1dp"
            android:src="@drawable/tab_edit"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@drawable/tab_home_color"
            android:textSize="@dimen/textSize24px"
            android:visibility="visible"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_setting_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/home_tab"
            android:layout_height="@dimen/home_tab"
            android:padding="1dp"
            android:src="@drawable/tab_user"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textColor="@drawable/tab_home_color"
            android:textSize="@dimen/textSize24px"
            android:visibility="visible"></TextView>
    </LinearLayout>
</LinearLayout>
    <View
        android:id="@+id/home_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"
        android:layout_above="@id/home_bottom"></View>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/home_line" />
</RelativeLayout>
