<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back_user"
                android:layout_width="@dimen/public_hint"
                android:layout_height="@dimen/public_hint"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/public_hint"
                android:tint="@color/white"
                app:srcCompat="@drawable/white_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/public_hint"
                android:text="@string/add_news"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize36px" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/small_hint"
      app:counterEnabled="true"
      app:counterMaxLength="20">
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/title"
          android:maxLines="1" />
  </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_hint"
        android:layout_marginBottom="@dimen/small_hint">
        <com.coorchice.library.SuperTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_type"
            app:text_stroke="true"
            app:stroke_width="2dp"
            app:stroke_color="@color/blue"
            android:padding="@dimen/small_hint"
            app:corner="5dp"/>
        <View
            android:layout_width="@dimen/login_editText_hight"
            android:layout_height="match_parent"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/type"
        android:spinnerMode="dropdown">
    </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray"></View>
</LinearLayout>
