<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.example.peter.newsadmin.activity.UserMessageActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/btn_back_user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/public_hint"
                    android:layout_height="@dimen/public_hint"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/public_hint"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/white_arrow_back" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/public_hint"
                android:text="@string/user_message"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize36px" />
        </LinearLayout>
         <TextView
             android:id="@+id/update_sure"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/public_hint"
             android:text="@string/update"
             android:paddingRight="@dimen/public_hint"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize36px" />
     </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/change_user_pic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_hint"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_pic"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize28px"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/chose_user_pic"
            android:layout_width="@dimen/login_card"
            android:layout_height="@dimen/login_card"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:id="@+id/turn_change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/nick_name"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                />
            <EditText
                android:id="@+id/user_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/nick_name"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxEms="15"
                android:ellipsize="end"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/small_hint"
                />
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                />
            <EditText
                android:id="@+id/edit_sex"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxEms="15"
                android:ellipsize="end"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/small_hint"
                />
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/brith_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                />
            <TextView
                android:id="@+id/text_brith"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxEms="15"
                android:ellipsize="end"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/small_hint"
                />
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/user_sign"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                />
            <EditText
                android:id="@+id/edit_sign"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_editText_hight"
                android:background="@color/white"
                android:layout_centerVertical="true"
                android:text="@string/user_sign"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize28px"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:maxEms="15"
                android:ellipsize="end"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/small_hint"
                />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
