<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.peter.newsadmin.activity.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/btn_back_user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/public_hint"
                    android:layout_height="@dimen/public_hint"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/public_hint"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/white_arrow_back" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/public_hint"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize36px" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_card"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/public_hint"
                        android:layout_height="@dimen/public_hint"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/login_hint"
                        app:srcCompat="@drawable/ic_user_logo_gray_24dp" />

                    <EditText
                        android:id="@+id/register_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/register_phone"
                        android:paddingLeft="@dimen/login_hint"
                        android:inputType="number"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/textSize28px" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="@dimen/public_login_weight"
                    android:layout_marginRight="@dimen/public_hint"
                    android:background="@color/gray"></View>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_card"
                android:orientation="horizontal">

                <ImageView
                android:layout_width="@dimen/public_hint"
                android:layout_height="@dimen/public_hint"
                android:layout_gravity="center"
                android:layout_margin="@dimen/login_hint"
                app:srcCompat="@drawable/ic_password" />

                <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                    android:inputType="textPassword"
                android:hint="@string/register_password"
                android:paddingLeft="@dimen/login_hint"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/textSize28px" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin">-->
            <!--<Button-->
                <!--android:id="@+id/btn_register_get_code"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="@dimen/login_editText_hight"-->
                <!--android:background="@drawable/public_button_shape"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/register_get_verification_code"-->
                <!--android:textSize="@dimen/textSize32px"-->
                <!--android:textColor="@drawable/public_button_text_color"-->
                <!--android:layout_marginRight="@dimen/activity_horizontal_margin"/>-->

            <!--<EditText-->
                <!--android:id="@+id/code_edit"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="@dimen/login_editText_hight"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/register_code_shape"-->
                <!--android:gravity="center"-->
                <!--android:hint="@string/register_verification_hitn"-->
                <!--android:inputType="number"-->
                <!--android:maxLength="6"-->
                <!--android:textColor="@color/blue"-->
                <!--android:textColorHint="@color/gray"-->
                <!--android:textSize="@dimen/textSize32px" />-->
        <!--</LinearLayout>-->
        <Button
            android:id="@+id/btn_register_register"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_editText_hight"
            android:background="@drawable/public_button_shape"
            android:text="@string/login"
            android:textSize="@dimen/textSize32px"
            android:textColor="@drawable/public_button_text_color" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/go_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/public_hint"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:text="@string/no_account_number"
            android:textSize="@dimen/textSize26px" />

        <ImageView
            android:layout_width="@dimen/public_hint"
            android:layout_height="@dimen/public_hint"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_chevron_right_white" />
    </RelativeLayout>
</LinearLayout>


